fixed padding for the navbar on mobiles

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,6 +16,13 @@
 }
 
 
+@media screen and (max-width: 767px) {
+  .navbar-wagon {
+    padding: 0px 15px 0px 20px;
+  }
+}
+
+
 .navbar-wagon-white {
   color: #616668;
   background-color: white;
